Spacing fixes for Containment.

--- a/src/components/flasherpants/style.scss
+++ b/src/components/flasherpants/style.scss
@@ -3,7 +3,7 @@
 }
 
 :local(.containment-module) {
-  &.p-0 {
+  &[class*="px"] {
     .row {
       margin-left: 0 !important;
       margin-right: 0 !important;
@@ -13,7 +13,6 @@
         &:last-child { padding-right: 0 !important; }
       }
     }
-
   }
 }
 
